# NeuroPipe

./: .gitignore  CMakeLists.txt  COMPLETION_REPORT.txt  DASHBOARD_ARCHITECTURE.md  DASHBOARD_CHEATSHEET.md  DASHBOARD_COMPLETE.md  DASHBOARD_FILES.txt  EDGE_CASES_CHECKLIST.md  EDGE_CASES_SUMMARY.md  FIXES_APPLIED.md  GETTING_STARTED_DASHBOARD.md  IMPLEMENTATION_SUMMARY.md  LIVE_DASHBOARD_PLAN.md  Makefile  README.md  README_DASHBOARD.md  RUN_INSTRUCTIONS.txt  debug_connection.sh  test_manual_flow.sh  test_message_format.cpp
dashboards/: view_all.sh  view_errors.sh  view_metrics.sh  view_service.sh
examples/: robust_app.cpp  simple_app.cpp
include/: message.hpp
lib/: debug_logger.cpp  debug_logger.hpp
src/: asio_server.cpp  asio_server.hpp  broker.cpp  broker_legacy.cpp  consumer.cpp  consumer_legacy.cpp  producer.cpp  producer_legacy.cpp  server.cpp  server.hpp  utils.hpp
tests/: test_asio_broker.cpp  test_basic.cpp  test_edge_cases.sh
